# pywindow

./: .gitignore  .readthedocs.yaml  HISTORY_CC3_cage_pywindow_analysis.json  LICENSE  README.md  README.rst  TEST.ipynb  build.sh  justfile  meta.yaml  pyproject.toml  requirements.txt  run_tests_no_validation.sh  setup.py
.github/workflows/: publish_release.yaml  tests.yaml
docs/: .buildinfo  Makefile  _config.yml  conf.py  genindex.html  index.html  make.bat  modules.html  objects.inv  py-modindex.html  pywindow.html  pywindow.io_tools.html  pywindow.molecular.html  pywindow.tables.html  pywindow.trajectory.html  pywindow.utilities.html  search.html  searchindex.js
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/pywindow/: io_tools.html  molecular.html  trajectory.html  utilities.html
docs/_sources/: index.rst.txt  pywindow.io_tools.rst.txt  pywindow.rst.txt  pywindow.utilities.rst.txt
docs/source/: conf.py  examples.rst  index.rst  modules.rst  multi_examples.rst  pyWINDOW.rst  pywindow.molecular.rst  pywindow.trajectory.rst
docs/source/_autosummary/: pywindow.ConvexHull.rst  pywindow.DBSCAN.rst  pywindow.DLPOLY.rst  pywindow.Input.rst  pywindow.KDTree.rst  pywindow.MolecularSystem.rst  pywindow.Molecule.rst  pywindow.Output.rst  pywindow.PDB.rst  pywindow.Pool.rst  pywindow.XYZ.rst  pywindow.acylidricity.rst  pywindow.align_principal_ax.rst  pywindow.angle_between_vectors.rst  pywindow.asphericity.rst  pywindow.brute.rst  pywindow.calc_acylidricity.rst  pywindow.calc_asphericity.rst  pywindow.calc_relative_shape_anisotropy.rst  pywindow.calculate_pore_shape.rst  pywindow.calculate_window_diameter.rst  pywindow.cart2frac_all.rst  pywindow.cartisian_from_fractional.rst  pywindow.center_of_coor.rst  pywindow.center_of_mass.rst  pywindow.circumcircle.rst  pywindow.circumcircle_window.rst  pywindow.closing.rst  pywindow.compare_properties_dict.rst  pywindow.compose_atom_list.rst  pywindow.correct_pore_diameter.rst  pywindow.create_supercell.rst  pywindow.decipher_atom_key.rst  pywindow.decompose_atom_list.rst  pywindow.deepcopy.rst  pywindow.discrete_molecules.rst  pywindow.distance.rst  pywindow.dlf_notation.rst  (+167 more)
doctrees/: environment.pickle  index.doctree  modules.doctree  pywindow.doctree  pywindow.io_tools.doctree  pywindow.molecular.doctree  pywindow.tables.doctree  pywindow.trajectory.doctree  pywindow.utilities.doctree
examples/: Example1_StructuralProperties.ipynb  Example1_StructuralPropertiesOfMolecularPores.ipynb  Example2_LoadingRDKitMolecule.ipynb  Example3_CalculatingAverageDiameter.ipynb  Example4_AnalyseMOF.ipynb  Example5_AnalyseMetalOrganicCage.ipynb  Example6_PeriodicSystemMultipleMolecules.ipynb  Example7_AnalysingTrajectory.ipynb  Example7_AnalysingTrajectorySingleMol.ipynb  Example8_AnalysingTrajectoryPeriodic.ipynb  Example_1.ipynb  README.md  __init__.py  example_1.py  example_2.py  example_3.py  example_4.py  example_5.py  example_6.py  example_7.py  example_8.py  testable_example.py
pywindow/: __init__.py  graph.py  io_tools.py  molecular.py  plot.py  shape.py  tables.py  trajectory.py  utilities.py
src/pywindow/: __init__.py  molecular.py  tables.py  trajectory.py  utilities.py
test/: README.md  test2.py  test3_validate_windows.py  test5_validate_cc3.py
tests/: test1_io.py  test2_molecular.py  test3_validate_windows.py  test4_validate_average_diameter.py  test5_validate_cc3.py  test6_validate_54cases.py  test_io.py  test_molecular.py  test_validate_average_diameter.py  test_validate_cc3.py  test_validate_windows.py
(+63 files in other folders)
